Fix the icon size on mobile

--- a/projects/packages/jetpack-mu-wpcom/src/features/wpcom-site-menu/wpcom-site-menu.scss
+++ b/projects/packages/jetpack-mu-wpcom/src/features/wpcom-site-menu/wpcom-site-menu.scss
@@ -35,6 +35,6 @@
 	#wpadminbar .wp-admin-bar-all-sites a.ab-item:before {
 		width: 36px;
 		height: 36px;
-		padding: 0 8px;
+		margin: 0 8px;
 	}
 }
